# sentinel-safe-wallet

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  package.json
backend/: .env.example  Cargo.toml  DEMO.md  README.md
backend/ai-agents/: Cargo.toml  cfo-agent.js  index.js  onchain-analyst.js  package.json  security-agent.js
backend/ai-agents/src/: main.rs
backend/fee-delegation/: Cargo.toml  index.js  package.json
backend/fee-delegation/src/: main.rs
backend/orchestrator/: Cargo.toml  index.js  package.json
backend/orchestrator/src/: ISafe.json  main.rs  safe_contract.rs  safe_contract_abi.rs
backend/python-scripts/: pyproject.toml
backend/python-scripts/src/: __init__.py  demo_sign.py
backend/shared/: Cargo.toml
backend/shared/src/: constants.rs  lib.rs  types.rs  utils.rs
contracts/: .env.example  .gitignore  README.md  foundry.toml
contracts/script/: DeployKairos.s.sol  DeployWithKaiaSafe.s.sol
contracts/src/: SafeRoleGuard.sol
contracts/src/interfaces/: IRoleGuard.sol  ISafe.sol
contracts/test/: SafeRoleGuard.t.sol
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
