[workspace]
members = ["crates/core", "crates/app", "crates/worker"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
alloy = { version = "1.0.25", features = ["full"] }
core = { path = "crates/core" }
