[workspace]
members = [
    "orchestrator",
    "ai-agents", 
    "fee-delegation",
    "shared"
]
resolver = "2"

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
alloy = { version = "1.0.27", features = ["full", "node-bindings", "rpc-client-ws"] }
alloy-primitives = "1.3.1"
alloy-sol-types = "1.3.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
dotenv = "0.15.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.89"
hex = "0.4.3"
